<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="label_fight_covid_19">Fight Covid-19</string>
    <string name="label_let_s_start">Let\'s Start</string>
    <string name="label_together_with_ncovidtracker">Together with \nCovidTracker</string>
    <string name="label_covid_tracker_helps_government_to_tracking_human_s_travel_history">Covid Tracker helps government to tracking human\'s travel history</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_we_will_require_your_information_to_match_with_government_data">We will require your information to match with government data.</string>
    <string name="label_name">Name</string>
    <string name="label_city">City</string>
    <string name="label_phone_no">Phone No.</string>
    <string name="label_aadhar_no">Aadhar No.</string>
    <string name="label_by_continuing_you_agree_to_covid_s_19_terms_amp_conditions_and_privacy_policy"><![CDATA[By Continuing, you agree to Covid\'s-19 Terms & Conditions and Privacy Policy]]></string>
    <string name="button_sign_up">Sign Up</string>
    <string name="label_covid_tracker">Covid Tracker</string>
    <string name="label_log_entry">Log Entry</string>
    <string name="label_current_status">Current Status</string>
    <string name="check_out">Check Out</string>
    <string name="label_settings">Settings</string>
    <string name="label_log_out">Log Out</string>
    <string name="label_about_covid">About Covid</string>
    <string name="label_report">Report</string>
    <string name="label_verify">Verify</string>
    <string name="label_we_have_sent_an_otp_to_your_number">We have sent an OTP to your number</string>
    <string name="label_please_enter_otp_to_get_access_to_the_app">Please enter OTP to get access to the app</string>
    <string name="label_enter">Enter</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="label_log_in">Log In</string>
    <string name="label_have_an_account_login">Have an Account? LogIn</string>
    <string-array name="state_name">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
</resources>